# stencil_benchmarks

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile
src/: CMakeLists.txt  arguments.cpp  arguments.h  config.h.in  field_array.h  field_info.cpp  field_info.h  field_repository.cpp  field_repository.h  main.cpp  real.h  stencil_execution.cpp  stencil_execution.h  stencil_factory.cpp  stencil_factory.h  util.cpp  util.h
src/backend/: cuda.cu  cuda.h  openmp.h  util.cpp  util.h
src/backend/cuda/: allocator.h  basic_stencils_1d.h  basic_stencils_blocked.h  block_index.h  blocked_execution.h  check.h  hdiff_ijcache.cu  hdiff_ijcache.h  hdiff_naive.cu  hdiff_naive.h  hdiff_otf.cu  hdiff_otf.h  hdiff_otf_fillcache.cu  hdiff_otf_fillcache.h  vadv_kcache.cu  vadv_kcache.h
src/backend/openmp/: basic_stencils_1d.h  basic_stencils_blocked.h  blocked_execution.h  copy_stencil.h  hdiff_ijcache_blocked.h  hdiff_naive.h  hdiff_otf.h  hdiff_otf_blocked.h  loops.h  vadv_base.h  vadv_blocked.h  vadv_ij_blocked.h  vadv_kcache_blocked.h
src/platform/: generic.cpp  knl.cpp  knl_allocator.h  nvidia.cpp  nvidia.h  openmp_helper.h  platform.h
src/platform/generic/: CMakeLists.txt  generic.cpp  generic.h
src/platform/knl/: CMakeLists.txt  allocator.h  knl.cpp  knl.h
src/platform/nvidia/: CMakeLists.txt  allocator.h  nvidia.cu  nvidia.h
src/stencil/: basic.h  basic_functors.h  hdiff.h  vadv.h
stencil_benchmarks/benchmarks_collection/unstructured/: base.py
stencil_benchmarks/benchmarks_collection/unstructured/cuda_hip/: basic.py  mixin.py
stencil_benchmarks/benchmarks_collection/unstructured/cuda_hip/templates/: base.j2  copy.j2  edge_sum.j2  nabla.j2
stencil_benchmarks/tools/: parallel.cpp
